[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Shell.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/fonts/8bit-wonder/8-BIT WONDER.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 158.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreHintLabel" type="Label" parent="ScoreHBoxContainer"]
margin_right = 208.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Score   "

[node name="ScoreValueLabel" type="Label" parent="ScoreHBoxContainer"]
margin_left = 212.0
margin_right = 244.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ShellHBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -128.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shell" parent="ShellHBoxContainer" instance=ExtResource( 2 )]
margin_right = 32.0
margin_bottom = 128.0

[node name="Shell2" parent="ShellHBoxContainer" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 128.0

[node name="Shell3" parent="ShellHBoxContainer" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 128.0

[node name="Shell4" parent="ShellHBoxContainer" instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 128.0

[node name="Shell5" parent="ShellHBoxContainer" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 128.0
